css/style.css
body {
    /*    background-color: white;*/
    background-image: url(../images/cool-background.png);
    background-size: cover;
    font-family: 'Copperplate Gothic Light';

    color: #2c2c14;
    display: flex;
    flex-direction: column;
    padding: 15px;
    height: 100%;
    font-size: 20px;
    font-family: sans-serif;
    margin-left: 10%;
    margin-right: 10%;
    font-weight: 400;

}

* {
    font-family: 'Courier New';
    ;

}

a,
a:hover,
a:visited {
    text-decoration: none;
    color: currentColor;

}

.btn {
    border-radius: 10px;
    background: rgba(0, 128, 0, 0.5);
    padding: 5px;
}

header {
    display: flex;
    flex-direction: column;
    background-color: transparent;
}

#logo {
    font-size: 30px;
    font-weight: bold;
    /* background-color: rgba(240, 248, 255, 0.1); */
    border-radius: 5px;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;

}

#header,
#logo {
    width: 100%;
    display: flex;
    justify-items: flex-start;
    justify-content: space-around;
    align-items: center;

}
#logo>a {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

#logo img,
#logo span {
    /*    width: auto;*/
    height: 40px;
}


#nav {
    background-color: rgba(240, 248, 255, 0.5);
    display: flex;
    flex-direction: row;
    justify-items: baseline;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin: 10px 0px 10px 0px;


}
.active {
    color: rgb(72, 9, 9) !important;
    background-color: rgba(240, 248, 255, 0.6);
}

aside {
    background-color: rgba(230, 247, 217, 0.4);
    /*    width: 100%;*/
    text-align: center;
    justify-items: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1px;

}

footer {
    background-color: rgba(9, 11, 15, 0.5);
    color: white;
    text-align: center;
}

nav div {
    padding: 10px;
    justify-content: center;
    width: 120px;
}

.mini,
.mini > img {
    width: 200px;
    height: 150px;
    border-radius: 10px;

}

.small {
    width: 400px;
    height: 300px;
    border-radius: 10px;
}

#small-grid {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(4, 200px);
    grid-template-rows: repeat(2, 150px);
    grid-gap: 15px;
    margin: 10px;
}

#mini {
    display: flex;
    flex-direction: row;
    max-width: 850px;
    min-width: 300px;
    height: auto;
    flex-wrap: wrap;
    justify-content: center;
    justify-items: center;
    align-items: baseline;
    column-gap: 10px;
    row-gap: 10px;
    padding: 10px 0px 10px 0px;


}

.title {
    /*    height: 50px;*/
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
}

.show {
    display: grid !important;
    grid-template-rows: repeat(4, 1fr);
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas:
        "img cat"
        "img name"
        "img con"
        "download con";
    gap: 15px;
    padding-top: 30px;
}

.show div {
    /*    border: 1px solid black;*/
    background: rgba(244, 234, 234, 0.25);
    border-radius: 5px;
    /*    width: 100%;*/
}

.show .btn {
    font-size: 20px !important;
}

.img {
    grid-area: img;
}

.nam {
    grid-area: name;
}

.con {
    grid-area: con;
}

.cat {
    grid-area: cat;
}

.down {
    grid-area: download;
}


.menu {
    color: aliceblue;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    /*    width: 100%;*/

}


.flex {
    background-color: rgba(0, 128, 0, 0.5);
    display: flex;
    flex-direction: row;
    align-items: center;
    /*    margin: 10px;*/
    /* width: auto; */
    margin: 10px 0px 10px 0px;
    font-weight: 400;
    color: azure;
    flex-wrap: wrap;
}

.flex a:hover {
    color: #ffe3e3;
    font-weight: 800;
    transition-delay: 0.1s;
}

.flexb {
    justify-content: space-between;
    width: 40px;
    column-gap: 15px;
}
.flexm {
    background-color: rgba(0, 128, 0, 0.5);
    justify-content: space-around;
    width:auto;
    display: flex;
    flex-wrap: wrap;
    column-gap: 15px;
    color: azure;
}
.flexm div a{
    width: 100%;
}

.grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    gap: 20px;
}

#menu a {
    margin-left: 5px;
    margin-right: 5px;

}

.formc {
    width: 120px;
    height: 50px;
    background: rgba(255, 255, 255, 0.49);
    font-size: 18px;
    font-weight: bolder;
}

table {
    width: 60%;
}

tr,
td {
    background: rgba(235, 228, 228, 0.74);
    border: 1.5px solid black;
    width: auto;
    min-width: inherit;
    color: #10100d;
}

#hideMe {
    display: none;
    text-align: start;
    justify-items: start;
    justify-content: center;
}

.error {
    color: orangered;
    font-size: 12px;
}

div > label {
    width: 170px;
    color: forestgreen;
}

label > button {
    justify-self: center;
}

.red {
    color: red !important;
}

table#files td.file:hover > div.hidden {
    display: block !important;
    background-color: darkgray;
    color: chartreuse;
    position: absolute;
    z-index: 1;
}

div#small:hover > div.hidden {
    display: block !important;
    border-radius: 10px;
    font-size: 10px;
    z-index: 1;
    position: absolute;
    padding-right: 20px;
    /*    top: 300px;*/
    background: rgba(255, 255, 255, 0.63);
}


div.mini:hover > div.hidden {
    display: block !important;
    background-color: darkgray;
    color: chartreuse;
    position: relative;
    top: -100px;
    border-radius: 10px;
    font-size: 10px;
    z-index: 1;
}

.hidden {
    display: none;
}

td:hover,
#sub:hover {
    background-color: #d0f4b6;
    /*    margin: 5px;*/
    border-radius: 5px;
}
#catl,
#sub > a {
    padding: 15px;
    font-weight: 900;
    /*    font-size: 20px;*/
}

aside.edit {
    width: 100%;
}

.edit {
    display: flex;
    flex-direction: row;
    /*    justify-items: center;*/
    justify-content: space-evenly;
    width: 100%;
}

@media screen and (max-width: 735px) {
aside .show {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}



}
@media screen and (max-width: 600px) {
   /* #header {
        background: rgba(240, 248, 255, 0.1) !important;
    }
    #logo {
        background: transparent;

    } */
    #header #logo a {
        display: flex;
        flex-direction: column;
        justify-items: center;
        align-content: center;
    }
    #l1 {
        order: 2;
    }
    #l2 {
        order: 1;
    }
    #l3 {
        order: 3;
    }
    #logo>a {
        flex-direction: column;
    }
    div .menu>a.btn {
        font-size: small;
        text-align: center;
    }
}

